# cookiecutter-pypackage

./: README.md  cookiecutter.json
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.project_slug}}/: .bumpversion.cfg  .flake8  CONTRIBUTING.md  README.md  makefile  pyproject.toml  setup.cfg  tox.ini
{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.pkg_name}}.py
